<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_bg"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/pink_primary"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/black_deep"
        android:hint="@string/hint_email"
        android:textColorHint="@color/pink_accent"
        android:textColor="@color/white"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/black_deep"
        android:hint="@string/hint_password"
        android:textColorHint="@color/pink_accent"
        android:textColor="@color/white"
        android:padding="12dp"
        android:inputType="textPassword"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/pink_primary"
        android:text="@string/btn_login"
        android:textColor="@color/black_deep"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvGoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_have_account"
        android:textColor="@color/pink_accent"
        android:layout_marginTop="16dp" />

</LinearLayout>