<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#0D1216"
    android:orientation="vertical"
    android:padding="24dp">

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:background="#E19CBB" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_delete"
        android:textColor="#FF017E"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp"
        android:text="@string/confirm_delete"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmarEliminar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/rounded_input"
        app:backgroundTint="#FF017E"
        android:text="@string/btn_confirm_delete"
        android:textAllCaps="false"
        android:textColor="#070103"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancelarEliminar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_input"
        app:backgroundTint="#0D1216"
        android:text="@string/btn_cancelar"
        android:textAllCaps="false"
        android:textColor="#E19CBB" />
</LinearLayout>